tests/snapshots/examples_fixtures/runtime_boundaries__RuntimeBoundaries__Predicates.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/runtime_boundaries/RuntimeBoundaries/Predicates.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
